templates/deployment-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-standalone
  namespace: { ? { .Values.namespace } }
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-standalone
  template:
    metadata:
      labels:
        app: minio-standalone
    spec:
      securityContext:
        runAsNonRoot: true
      serviceAccountName: default
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: minio-storage
      containers:
      - name: minio-standalone
        command:
        - minio
        - server
        - --address=:9000
        - --console-address=:9090
        - /data
        image: minio/minio:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/live
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - mountPath: "/data"
          name: data
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/ready
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "8"
            memory: 20Gi
          requests:
            cpu: 200m
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: [ "ALL" ]
          seccompProfile:
            type: RuntimeDefault
      restartPolicy: Always
