templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  namespace: { ? { .Values.namespace } }
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio-api
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-ui
  namespace: { ? { .Values.namespace } }
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: minio-ui
  sessionAffinity: None
  type: ClusterIP
